gcc/testsuite/algol68/compile/error-string-break-3.a68
begin puts ("hello '(u00) world") # { dg-error "four" }  #
end
